--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,25 @@
+plugins {
+    id 'com.github.hierynomus.license' version '0.14.0'
+    id 'maven-publish'
+    id 'net.nemerosa.versioning' version '2.7.1'
+    id 'com.jfrog.bintray' version '1.8.1'
+    id 'com.github.ben-manes.versions' version '0.13.0'
+}
+
 apply plugin: 'java'
 
+apply from: 'gradle/publishing.gradle'
+
 sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.5.1'
-    distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
+tasks.withType(Javadoc) {
+    options.addStringOption('Xdoclint:none', '-quiet')
+}
+
+wrapper {
+    gradleVersion = '5.3'
 }
 
 // Dependency repository.
